src/objects/geopointe__GP_User_Settings__c.object
<CustomObject>
    <fields>
        <fullName>geopointe__Auto_Load_Data_Layers__c</fullName>
        <label>Auto Load Data Layers</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>geopointe__Auto_Load_Data_Sets__c</fullName>
        <label>Auto Load Data Sets</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>geopointe__Auto_Load_Demographics__c</fullName>
        <label>Auto Load Demographics</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>geopointe__Auto_Load_Layers__c</fullName>
        <label>Auto Load Layers</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>geopointe__Auto_Load_Map_Items__c</fullName>
        <label>Auto Load Map Items</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>geopointe__Auto_Load_Migration_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Set when starred map items have been recoded as Auto_Load_Map_Items__c</inlineHelpText>
        <label>Auto Load Migration Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>geopointe__Auto_Load_Shapes__c</fullName>
        <label>Auto Load Shapes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>geopointe__Auto_Load_Thematic__c</fullName>
        <label>Auto Load Thematic</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>geopointe__Custom_Google_Maps_URL__c</fullName>
        <inlineHelpText>Used to define loading of a custom Google Maps URL.</inlineHelpText>
        <label>Custom Google Maps URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Default_Calendar_Duration__c</fullName>
        <inlineHelpText>The default item duration for the calendar</inlineHelpText>
        <label>Default Calendar Duration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Default_Calendar_View__c</fullName>
        <inlineHelpText>The default starting view for the calendar</inlineHelpText>
        <label>Default Calendar View</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Default_Route_Optimization_Type__c</fullName>
        <label>Default Optimization Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Distance</fullName>
                    <default>true</default>
                    <label>Distance</label>
                </value>
                <value>
                    <fullName>Schedule</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>geopointe__Default_Route_Stop_Duration__c</fullName>
        <inlineHelpText>Default duration in minutes for a route stop. This may be overriden by system configuration.</inlineHelpText>
        <label>Default Stop Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Default_Route_Window_Start__c</fullName>
        <inlineHelpText>Default route window start time. This may be changed on the route.</inlineHelpText>
        <label>Default Route Window</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Default_Route_Window_Stop__c</fullName>
        <inlineHelpText>Default route window start time. This may be changed on the route.</inlineHelpText>
        <label>Default Route Window End</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Distance_Unit__c</fullName>
        <defaultValue>&quot;mi&quot;</defaultValue>
        <inlineHelpText>The unit used (&apos;mi&apos; or &apos;km&apos;) to express size or distance. This setting is kept for each user.</inlineHelpText>
        <label>Distance Unit</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__End_Location_Name__c</fullName>
        <label>End Location Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__End_Location__c</fullName>
        <label>End Location</label>
        <scale>9</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>geopointe__Favorite_Map_Items__c</fullName>
        <label>Favorite Map Items</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>geopointe__Friday_End_Time__c</fullName>
        <label>Friday End Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>geopointe__Friday_Start_Time__c</fullName>
        <label>Friday Start Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>geopointe__Global_Business_Monthly_Limit__c</fullName>
        <label>Business/Contact Monthly Import Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Hide_Data_Table__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, will hide the Data Table on the map for the User.</description>
        <inlineHelpText>If checked, will hide the Data Table on the map for the User.</inlineHelpText>
        <label>Hide Data Table</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>geopointe__License_Route_Planner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Route Planner License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>geopointe__Lunch_End_Time__c</fullName>
        <label>Lunch End Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>geopointe__Lunch_Start_Time__c</fullName>
        <label>Lunch Start Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>geopointe__Mobile_UI_Preference__c</fullName>
        <description>This setting determines the default UI to load on iPad.</description>
        <inlineHelpText>This setting determines the default UI to load on iPad.</inlineHelpText>
        <label>Mobile UI Preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Desktop</fullName>
                </value>
                <value>
                    <fullName>Mobile Optimized</fullName>
                    <default>true</default>
                    <label>Mobile Optimized</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>geopointe__Monday_End_Time__c</fullName>
        <label>Monday End Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>geopointe__Monday_Start_Time__c</fullName>
        <label>Monday Start Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>geopointe__Recently_Used_Map_Items__c</fullName>
        <label>Recently Used Map Items</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>geopointe__Recently_Used_SF1_Items__c</fullName>
        <label>Recently Used Map Items (Mobile)</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>geopointe__Route_Start_Location__c</fullName>
        <inlineHelpText>When set to &apos;currentLocation&apos;, appends Current Location (if available) to start of Route</inlineHelpText>
        <label>Start Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Saturday_End_Time__c</fullName>
        <label>Saturday End Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>geopointe__Saturday_Start_Time__c</fullName>
        <label>Saturday Start Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>geopointe__Show_Selected_Records__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, will show the selected records for the selected shapes when using the Multi Shape Editor for the User.</description>
        <inlineHelpText>If checked, will show the selected records for the selected shapes when using the Multi Shape Editor for the User.</inlineHelpText>
        <label>Show Selected Records in Shape Editor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>geopointe__Start_Location_Name__c</fullName>
        <label>Start Location Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Start_Location__c</fullName>
        <label>Start Location</label>
        <scale>9</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>geopointe__Sunday_End_Time__c</fullName>
        <label>Sunday End Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>geopointe__Sunday_Start_Time__c</fullName>
        <label>Sunday Start Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>geopointe__Temperature_Unit__c</fullName>
        <defaultValue>&quot;f&quot;</defaultValue>
        <inlineHelpText>The unit used (f or c) to measure temperature. This setting is kept for each user.</inlineHelpText>
        <label>Temperature Unit</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Thursday_End_Time__c</fullName>
        <label>Thursday End Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>geopointe__Thursday_Start_Time__c</fullName>
        <label>Thursday Start Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>geopointe__Tuesday_End_Time__c</fullName>
        <label>Tuesday End Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>geopointe__Tuesday_Start_Time__c</fullName>
        <label>Tuesday Start Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>geopointe__Wednesday_End_Time__c</fullName>
        <label>Wednesday End Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>geopointe__Wednesday_Start_Time__c</fullName>
        <label>Wednesday Start Time</label>
        <type>Time</type>
    </fields>
    <label>Geopointe User Settings</label>
    <listViews>
        <fullName>geopointe__All</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Geopointe_User_Settings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geopointe User Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>